# all-role

./: package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/api/catatan-keuangan/extract/: route.ts
app/api/catatan-keuangan/logs/: route.ts
app/catatan-keuangan/: page.tsx
app/catatan-keuangan/components/: FinancialLogBoard.tsx  ReceiptAutomationStudio.tsx
app/components/home/: FloatingRubiksCube.tsx
app/components/pomodoro/: FloatingPomodoroWidget.tsx
app/pomodoro/: constants.ts  page.tsx
app/providers/: PomodoroProvider.tsx
data/: keuangan.csv
flowrunner/: README.md  pyproject.toml
flowrunner/flowrunner/: config.py  csv_store.py  main.py  models.py  workflow.py
flowrunner/flowrunner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
flowrunner/flowrunner/clients/: telegram.py
